STYLE: Fixed overly large font on mobile

--- a/public/css/base/_typography.css
+++ b/public/css/base/_typography.css
@@ -6,7 +6,7 @@ html {
 
 body {
     font-family: 'Source Serif 4', Georgia, serif;
-    font-size: 20px;
+    font-size: 1.8rem;
     font-weight: 350;
     letter-spacing: -0.003em;
     line-height: 3.2rem;
@@ -97,4 +97,10 @@ ul, ol {
     background-size: cover;
     border-radius: 5px;
     padding: 2px 5px;
+}
+
+@media (min-width: 768px) {
+    body {
+        font-size: 2rem;
+    }
 }
